# noetl

./: .babelrc  .dockerignore  .env  .env.dev  .env.docker  .env.example  .env.pycharm  .env.server  .env.worker  .env.worker-cpu-01  .env.worker-cpu-02  .env.worker-gpu-01  .gcloudignore  .gitignore  .gitmodules  .releaserc.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  DOCKER_HUB_RATE_LIMIT_ISSUE.md  DUCKDB_REFACTOR_SUMMARY.md  Dockerfile  GEMINI.md  Gopkg.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  MANIFEST.in  METRICS_IMPLEMENTATION_SUMMARY.md  Makefile  Makefile17  NOTICE  PYTHON_RETIREMENT.md  README.adoc  README.md  REDEPLOYMENT_GUIDE.md  REFACTORING_SUMMARY.md  SNOWFLAKE_TRANSFER_CHANGELOG.md  app.js  (+65 more)
.github/: ai-instructions.md  copilot-instructions.md  dependabot.yml  playbook-structure-reference.md
automation/: README.md  boot.yaml  bootstrap_full.yaml  destroy.yaml  main.yaml  test.yaml  test_local.yaml
catalog/: payload.yaml  playbook-schema.json  playbook.ebnf
ci/: MOVED.md  README.md
clusterManagement/: conf.json  crontab_monitorS3_runNoETL  monitorS3.sh  monitorSFTP.sh  pom.xml  runNoETL.sh  runTests.sh  showUsage.sh  terminateCluster.sh
conf/: chen.json  config.js  config_proposal.json  coursor.inherit.cfg.v1.json  coursor.inherit.cfg.v2.json  dispatcher.yaml  docker.conf  example_workflow.yaml  example_workflow_next.yaml  example_workflow_next_with_keys.yaml  example_workflow_steps_tasks.yaml  prod.conf  sample-demo-2.json  sample-demo-2.yaml  sample-demo.json  sample-demo.yaml  scope.coursor.inherit.cfg.v1.json  trend.yaml  workflow.schema.json
crates/control-plane/: Cargo.toml
crates/control-plane/src/: error.rs  lib.rs  main.rs  result_ext.rs  sanitize.rs  state.rs
crates/control-plane/src/config/: app.rs  database.rs  mod.rs
crates/control-plane/src/crypto/: encryption.rs  mod.rs
crates/control-plane/src/db/: mod.rs  pool.rs
crates/control-plane/src/db/models/: catalog.rs  credential.rs  event.rs  keychain.rs  mod.rs
crates/control-plane/src/db/queries/: catalog.rs  credential.rs  event.rs  keychain.rs  mod.rs
crates/control-plane/src/engine/: commands.rs  evaluator.rs  mod.rs  orchestrator.rs  state.rs
crates/control-plane/src/handlers/: catalog.rs  credentials.rs  dashboard.rs  database.rs  events.rs  execute.rs  executions.rs  health.rs  keychain.rs  mod.rs  runtime.rs  system.rs  variables.rs
crates/control-plane/src/nats/: mod.rs  publisher.rs
crates/control-plane/src/playbook/: mod.rs  parser.rs  types.rs
crates/control-plane/src/services/: catalog.rs  credential.rs  event.rs  execution.rs  keychain.rs  mod.rs  runtime.rs
crates/control-plane/src/template/: jinja.rs  mod.rs
crates/gateway/: ASYNC_CALLBACKS.md  AUTH_INTEGRATION.md  Cargo.toml  Dockerfile  README.md
crates/gateway/config/: gateway.example.toml  gateway.example.yaml
crates/gateway/src/: callbacks.rs  connection_hub.rs  get_val.rs  main.rs  noetl_client.rs  proxy.rs  request_store.rs  result_ext.rs  session_cache.rs  sse.rs
crates/gateway/src/auth/: middleware.rs  mod.rs  types.rs
crates/gateway/src/config/: gateway_config.rs  mod.rs
crates/gateway/src/db/: mod.rs
crates/gateway/src/graphql/: schema.rs  types.rs
crates/noetlcli/: Cargo.toml  README.md  pyproject.toml
crates/noetlcli/src/: main.rs  playbook_runner.rs
crates/noetlctl/: Cargo.toml  Dockerfile  README.md  pyproject.toml
crates/noetlctl/src/: main.rs  playbook_runner.rs
crates/tools/: Cargo.toml
crates/tools/src/: error.rs  lib.rs  registry.rs  result.rs
crates/tools/src/auth/: gcp.rs  resolver.rs
crates/tools/src/template/: engine.rs  mod.rs
crates/tools/src/tools/: http.rs  postgres.rs  python.rs  rhai.rs  script.rs  snowflake.rs  transfer.rs
crates/worker-pool/: Cargo.toml  Dockerfile
crates/worker-pool/src/: config.rs  lib.rs  main.rs  worker.rs
crates/worker-pool/src/client/: control_plane.rs  mod.rs
crates/worker-pool/src/events/: emitter.rs  mod.rs
crates/worker-pool/src/executor/: case_evaluator.rs  command.rs  mod.rs
crates/worker-pool/src/nats/: mod.rs  subscriber.rs
data/: README.md
debian/: changelog  control  copyright  install  rules
deployment/: deployment.yaml  service.yaml
doc/: NoETL-Erlang-Inspired-Workflow.md  micro-service-architecture.md  plugin_registration.txt  workflow_registration.txt
docker/: README.md  build-gateway-image.sh  build-images.sh  build-noetl-images.sh  build-postgres-image.sh
docs/: ITERATOR_LIFECYCLE_EVENTS_IMPLEMENTATION.md  LOOP_COMPLETION_BUG.md  MIGRATION.md  QUEUE_RETRY_STATUS_FLOW.md  RETRY_COMPLETE_IMPLEMENTATION.md  RETRY_QUICK_TEST_GUIDE.md  RETRY_TESTING_GUIDE.md  SAVE_BLOCK_MIGRATION.md  START_END_ACTION_TYPE_IMPLEMENTATION.md  action_type.md  analytics.md  api_refactoring_complete_summary.md  api_usage.md  architecture_overview.md  auth_cache_architecture_fix.md  auth_refactoring_summary.md  base_refactoring_summary.md  broker_consolidation_complete.md  broker_flow_diagrams.md  broker_package_consolidation.md  broker_refactoring_quickstart.md  broker_refactoring_summary.md  changelog.md  chat1-copilot.md  cli_usage.md  components.md  configuration.adoc  configuration.md  context_refactoring_summary.md  copilot-chat.md  core_concept.md  create_google_service_account.md  credentials_and_secrets.md  (+111 more)
native/: Cargo.toml
native/src/: lib.rs
noetl-gateway/: .gitignore  Cargo.toml  Dockerfile  README.md  env.example
noetl-gateway/k8s/: deployment.yaml  service.yaml
noetl-gateway/src/: main.rs  noetl_client.rs
noetl-gateway/src/db/: mod.rs
noetl-gateway/src/graphql/: schema.rs  types.rs
noetl-gateway/static/: README.md  index.html  styles.css
noetl-graphql-router/: Cargo.toml  README.md  rust-toolchain.toml
noetl-graphql-router/k8s/: deployment.yaml  service.yaml
noetl-graphql-router/src/: main.rs  noetl_client.rs
noetl-graphql-router/src/graphql/: schema.rs
noetlctl/: Cargo.toml  Dockerfile  README.md
noetlctl/src/: config.rs  main.rs
packaging/pypi/: Cargo.toml  README.md  pyproject.toml
packaging/pypi/python/noetl/: __init__.py
packaging/pypi/src/: lib.rs
(+3225 files in other folders)
