[workspace]
members = [
    "crates/noetlctl",
    "crates/gateway",
]
resolver = "2"

[workspace.package]
version = "2.5.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/noetl/noetl"
homepage = "https://noetl.io"

[workspace.dependencies]
# Shared dependencies across workspace members
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
