[workspace]
members = [
    "crates/noetl",
    "crates/gateway",
    "crates/control-plane",
    "crates/tools",
    "crates/worker-pool",
]
resolver = "2"

[workspace.package]
version = "2.8.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/noetl/noetl"
homepage = "https://noetl.io"

[workspace.dependencies]
# Shared dependencies across workspace members
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
