[project]
name = "noetl"
version = "5.0.0"
description = "NoETL CLI Python bindings over the Rust local executor and tool registry."
authors = [
    { name = "Kadyapam", email = "182583029+kadyapam@users.noreply.github.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
]
keywords = [
    "etl",
    "ml",
    "ops",
    "cleansing",
    "data",
    "pipeline",
    "workflow",
    "automation",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
]
publish = ["build>=1.2.2.post1", "twine>=6.1.0", "maturin>=1.0,<2.0"]

[project.scripts]
noetl = "noetl._cli:main"

[project.urls]
Homepage = "https://noetl.io"
Repository = "https://github.com/noetl/noetl"
Issues = "https://github.com/noetl/noetl/issues"

[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
manifest-path = "native/Cargo.toml"
module-name = "noetl._native"
python-source = "."
features = ["pyo3/extension-module"]
compatibility = "pypi"
strip = true

[dependency-groups]
dev = ["build>=1.2.2.post1", "twine>=6.1.0"]
