[package]
name = "noetl-python"
version = "5.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/noetl/noetl"
homepage = "https://noetl.io"
description = "PyO3 bindings for the NoETL CLI local executor."

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
noetl-executor = { path = "../../cli/executor" }
noetl-tools = { path = "../../tools" }
pyo3 = { version = "0.22", features = ["abi3-py39", "extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "time", "process", "macros"] }

[patch.crates-io]
noetl-directives = { path = "../../tools/directives" }
noetl-locator = { path = "../../tools/noetl-locator" }
noetl-tools = { path = "../../tools" }
