[package]
name = "noetl-graphql-router"
version = "0.1.0"
edition = "2021"

# axum 0.6 for compatibility with async-graphql-axum 6.x
[dependencies]
axum = { version = "0.6" }
# Use 6.x for broader compiler compatibility
async-graphql = { version = "=6.0.11", features = ["chrono", "uuid"] }
async-graphql-axum = "=6.0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# Use native-tls to avoid pulling rustls requiring newer base64ct
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
dotenvy = "0.15"
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }
once_cell = "1"
