[package]
name = "noetl-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7" }
async-graphql = { version = "=7.0.17", features = ["chrono", "uuid"] }
async-graphql-axum = "=7.0.17"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "native-tls",
  # "rustls-tls",
] }
dotenvy = "0.15"
anyhow = "1"
uuid = { version = "1", features = ["serde", "v4"] }
once_cell = "1"
