[package]
name = "noetl-graphql-router"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
async-graphql = { version = "7", features = ["subscriptions", "chrono", "uuid", "serde_json"] }
async-graphql-axum = "7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
reqwest = { version = "0.12", features = ["json"] }
async-nats = "0.37"
futures = "0.3"
dotenvy = "0.15"
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }
once_cell = "1"
