[package]
name = "noetl-gateway"
version = "2.8.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/noetl/noetl"
homepage = "https://noetl.io"
description = "NoETL Gateway - GraphQL API gateway for NoETL workflow automation"
keywords = ["gateway", "graphql", "noetl", "api", "workflow"]
categories = ["web-programming", "api-bindings"]

[dependencies]
axum = { version = "0.8.7" }
async-graphql = { version = "=7.0.17", features = ["chrono", "uuid"] }
async-graphql-axum = "=7.0.17"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "native-tls",
  # "rustls-tls",
] }

anyhow = "1"
uuid = { version = "1", features = ["serde", "v4"] }
once_cell = "1"
chrono = { version = "0.4", features = ["default", "serde"] }
dotenvy = "0.15"
ctor = "0.6.3"
envy = "0.4"

# sqlx
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
  "uuid",
] }

base64-compat = "1.0.0"
tower-http = { version = "0.6", features = ["cors"] }
async-nats = "0.38"
futures = "0.3"
url = "2"
tokio-stream = "0.1"
async-stream = "0.3"

# Config file parsing
toml = "0.8"
serde_yaml = "0.9"
