[package]
name = "noetl"
version = "2.5.10"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "NoETL workflow automation CLI - Execute playbooks locally or orchestrate distributed pipelines"
keywords = ["workflow", "automation", "etl", "mlops", "data-pipeline"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "noetl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
tokio = { version = "1", features = ["full", "process"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
base64 = "0.22"
anyhow = "1.0"
ratatui = "0.26"
crossterm = "0.27"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.31"
nix = { version = "0.29", features = ["signal", "process"] }
duckdb = { version = "1.0", features = ["bundled"] }
tempfile = "3.10"
shellexpand = "3.1"
regex = "1.10"
rhai = { version = "1.18", features = ["sync"] }
