[package]
name = "noetl-python"
version = "5.0.0"
edition = "2021"
license = "MIT"
publish = false
description = "PyO3 bindings for the NoETL CLI, published to PyPI as `noetl`"

[lib]
# maturin installs this as `noetl._native`; `module-name` in pyproject.toml is
# what places it inside the package.
name = "_native"
crate-type = ["cdylib"]

[dependencies]
# The CLI itself, from crates.io.  `cli_main` is the same clap dispatcher the
# `noetl` binary runs and `PlaybookRunner` is the same local engine — this
# package binds them, it does not reimplement them.
#
# `default-features = false` keeps the DuckDB C++ amalgamation out of the wheel
# build (noetl/cli#74 made it opt-in).  Consequence, documented in the README:
# `kind: duckdb` / `ducklake` steps, `sink: duckdb:`, and `noetl iap` report a
# rebuild hint instead of running.  Enabling it here would put a
# tens-of-minutes-to-an-hour C++ build on every platform in the wheel matrix.
noetl = { version = "4.21", default-features = false }

pyo3 = { version = "0.29", features = ["abi3-py39", "extension-module"] }
serde_json = "1.0"
# The local engine calls `tokio::task::block_in_place`, which needs a
# multi-thread runtime context; `#[tokio::main]` gave the binary one and
# `run_playbook` has to reproduce it.  Cargo unifies this with the CLI's tokio.
tokio = { version = "1", features = ["rt-multi-thread"] }

[profile.release]
# The wheel ships one artifact per platform and is downloaded far more often
# than it is built; trade build time for size and speed.
lto = true
codegen-units = 1
strip = true
